--- a/hippogriph/Cargo.toml
+++ b/hippogriph/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 rayon = "1.10.0"
-tfhe = {path="../tfhe-rs/tfhe", features= ["odd"]}
+tfhe = {path="../tfhe-rs/tfhe", features= ["odd", "nightly-avx512"]}
 clap = { version = "4.0", features = ["derive"] }
 aes = "0.8.4"
 hex = "0.4.3"
